--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ rsa==3.1.4
 selenium==2.46.0
 simplejson==3.7.3
 six==1.9.0
+sleekxmpp==1.3.1
 uritemplate==0.6
 websocket-client==0.32.0
 zope.interface==4.1.2
