--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+dnspython3==1.12.0
+docopt==0.6.2
 google-api-python-client==1.4.1
 httplib2==0.9.1
+irc3==0.8.1
 oauth2client==1.4.11
+pyasn1==0.1.7
 pyasn1-modules==0.0.5
 requests==2.7.0
 rsa==3.1.4
@@ -9,5 +13,7 @@ simplejson==3.7.3
 six==1.9.0
 sleekxmpp==1.3.1
 uritemplate==0.6
+venusian==1.0
 websocket-client==0.32.0
+wheel==0.24.0
 zope.interface==4.1.2
