regressing support for livecoding

--- a/chatimusmaximus/default_settings.yml
+++ b/chatimusmaximus/default_settings.yml
@@ -20,6 +20,7 @@ version: "0.0.1"
 #        text_color: "blue"
 
 #livecoding:
+    # NOTE: Currently unsupported!
     # this MUST be your livecode name
 #    name: ""
     # this can be your profile password
