--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-PyYAML==3.11
-Quamash==0.5.1
 dnspython3==1.12.0
 docopt==0.6.2
 google-api-python-client==1.4.1
@@ -8,6 +6,8 @@ irc3==0.8.1
 oauth2client==1.4.11
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
+PyYAML==3.11
+Quamash==0.5.1
 requests==2.7.0
 rsa==3.1.4
 selenium==2.46.0
@@ -18,4 +18,5 @@ uritemplate==0.6
 venusian==1.0
 websocket-client==0.32.0
 wheel==0.24.0
+Yapsy==1.11.223
 zope.interface==4.1.2
