added simplified yapsy branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "chatimusmaximus/listeners"]
 	path = chatimusmaximus/listeners
 	url = https://github.com/benhoff/plugins
+[submodule "chatimusmaximus/yapsy"]
+	path = chatimusmaximus/yapsy
+	url = https://github.com/benhoff/yapsy
