--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 PyYAML==3.11
 Quamash==0.5.1
+beautifulsoup4==4.4.0
 dnspython3==1.12.0
 docopt==0.6.2
+feedparser==5.2.1
 google-api-python-client==1.4.1
 httplib2==0.9.1
 irc3==0.8.1
+lxml==3.4.4
 oauth2client==1.4.11
 plugins==0.0.1
 pyasn1==0.1.7
@@ -13,11 +16,11 @@ requests==2.7.0
 rsa==3.1.4
 selenium==2.46.0
 simplejson==3.7.3
+simpleyapsy==0.0.1
 six==1.9.0
 sleekxmpp==1.3.1
 uritemplate==0.6
 venusian==1.0
 websocket-client==0.32.0
 wheel==0.24.0
-yapsy==1.11.300
 zope.interface==4.1.2
