--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,12 @@ httplib2==0.9.1
 irc3==0.8.1
 lxml==3.4.4
 oauth2client==1.4.11
-plugins==0.0.1
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
 requests==2.7.0
 rsa==3.1.4
 selenium==2.46.0
 simplejson==3.7.3
-simpleyapsy==0.0.1
 six==1.9.0
 sleekxmpp==1.3.1
 uritemplate==0.6
@@ -24,3 +22,4 @@ venusian==1.0
 websocket-client==0.32.0
 wheel==0.24.0
 zope.interface==4.1.2
+git+https://github.com/benhoff/simpleyapsy.git
