--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
-PyYAML==3.11
-Quamash==0.5.1
 beautifulsoup4==4.4.0
 dnspython3==1.12.0
 docopt==0.6.2
 feedparser==5.2.1
+flake8==2.4.1
 google-api-python-client==1.4.1
 httplib2==0.9.1
 irc3==0.8.1
 lxml==3.4.4
+mccabe==0.3.1
 oauth2client==1.4.11
+pep8==1.5.7
+pluginmanager
+git+https://github.com/benhoff/plugins.git
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
+pyflakes==0.8.1
+PyYAML==3.11
+Quamash==0.5.1
 requests==2.7.0
 rsa==3.1.4
 selenium==2.46.0
@@ -22,5 +28,3 @@ venusian==1.0
 websocket-client==0.32.0
 wheel==0.24.0
 zope.interface==4.1.2
-pluginmanager
-git+https://github.com/benhoff/plugins.git
