--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ mccabe==0.3.1
 oauth2client==1.4.11
 parse==1.6.6
 pep8==1.5.7
-pluginmanager==0.1.0
-plugins==0.0.1
+pluginmanager
+git+https://github.com/benhoff/plugins.git
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
 pycares==1.0.0
