--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,24 @@
-aiodns==1.0.0
-beautifulsoup4==4.4.0
-dnspython3==1.12.0
+aiodns==1.0.1
 docopt==0.6.2
-feedparser==5.2.1
-flake8==2.4.1
-google-api-python-client==1.4.1
-httplib2==0.9.1
-irc3==0.8.1
-lxml==3.4.4
-mccabe==0.3.1
-oauth2client==1.4.11
+google-api-python-client==1.5.0
+httplib2==0.9.2
+irc3==0.8.8
+oauth2client==2.0.0.post1
 parse==1.6.6
-pep8==1.5.7
 pluginmanager
-listenerplugins
-pyasn1==0.1.7
-pyasn1-modules==0.0.5
+pyasn1==0.1.9
+pyasn1-modules==0.0.8
 pycares==1.0.0
-pyflakes==0.8.1
 PyYAML==3.11
-Quamash==0.5.1
-requests==2.7.0
-rsa==3.1.4
-selenium==2.46.0
-simplejson==3.7.3
-six==1.9.0
+pyzmq==15.2.0
+Quamash==0.5.4
+requests==2.9.1
+rsa==3.3
+selenium==2.52.0
+simplejson==3.8.2
+six==1.10.0
 slixmpp==1.1
 uritemplate==0.6
 venusian==1.0
-websocket-client==0.32.0
-wheel==0.24.0
+websocket-client==0.35.0
+wheel==0.26.0
