working on converting over to message passed api for plugins

--- a/chatimusmaximus/default_settings.yml
+++ b/chatimusmaximus/default_settings.yml
@@ -3,6 +3,8 @@ version: "0.1.1"
 display:
     command_line: "user@chatimus ~$ "
 
+communication_port: 'tcp://localhost:5599'
+
 watchpeoplecode:
     channel: ""
     connect: false
