--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ google-api-python-client==1.5.0
 httplib2==0.9.2
 irc3==0.8.8
 oauth2client==2.0.0.post1
-parse==1.6.6
 pluginmanager
 pyasn1==0.1.9
 pyasn1-modules==0.0.8
@@ -17,7 +16,7 @@ rsa==3.3
 selenium==2.52.0
 simplejson==3.8.2
 six==1.10.0
-sleekxmpp==1.1
+slixmpp
 uritemplate==0.6
 venusian==1.0
 websocket-client==0.35.0
