fixed bug where default settings would cause program to error

--- a/chatimusmaximus/default_settings.yml
+++ b/chatimusmaximus/default_settings.yml
@@ -48,7 +48,7 @@ services:
             namespace: '/chat'
             website_url: 'http://www.watchpeoplecode.com/socket.io/1/'
             socket_address: ""
-            connect: true
+            connect: false 
             display_missing: true
     
     # youtube is special.
