--- a/chatimusmaximus/default_settings.yml
+++ b/chatimusmaximus/default_settings.yml
@@ -1,7 +1,13 @@
-version: "0.1.1"
+version: "0.1.2"
 
 display:
     command_line: "user@chatimus ~$ "
+
+sockets_to_connect_to: 
+    [
+        '',
+        ''
+    ]
 
 services:
 
