--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,7 @@
-aiodns==1.0.1
-docopt==0.6.2
-google-api-python-client==1.5.0
-httplib2==0.9.2
-irc3==0.8.8
-oauth2client==2.0.0.post1
-pluginmanager
-pyasn1==0.1.9
-pyasn1-modules==0.0.8
-pycares==1.0.0
+pluginmanager==0.4.0
+PyQt5==5.6
 PyYAML==3.11
 pyzmq==15.2.0
-Quamash==0.5.4
-requests==2.9.1
-rsa==3.3
-selenium==2.52.0
-simplejson==3.8.2
-six==1.10.0
-slixmpp
-uritemplate==0.6
-venusian==1.0
-websocket-client==0.35.0
-wheel==0.26.0
+Quamash==0.5.5
+sip==4.18
+vexbot
